--- a/Zalak_DRCDemo/Zalak_DRCDemo/Base.lproj/Main.storyboard
+++ b/Zalak_DRCDemo/Zalak_DRCDemo/Base.lproj/Main.storyboard
@@ -159,12 +159,16 @@ can take a clone of it and verify</string>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="smm-tQ-0ls">
                                                 <rect key="frame" x="20" y="181" width="374" height="187"/>
+                                                <color key="backgroundColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="smm-tQ-0ls" secondAttribute="height" multiplier="2:1" id="Tda-za-YN7"/>
                                                 </constraints>
                                                 <state key="normal" title="Image">
                                                     <color key="titleColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="didTapOnNewsImage:" destination="0wj-V2-fzs" eventType="touchUpInside" id="oJP-BU-Dtd"/>
+                                                </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7sK-PA-16D">
                                                 <rect key="frame" x="20" y="388" width="374" height="20"/>
@@ -230,6 +234,15 @@ can take a clone of it and verify</string>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SN5-VA-enV"/>
                     </view>
+                    <connections>
+                        <outlet property="authorNameLabel" destination="gda-Mn-nrp" id="4vb-Vw-Gll"/>
+                        <outlet property="contentLabel" destination="bVB-Sh-PFH" id="93G-cc-TbG"/>
+                        <outlet property="dateLabel" destination="tyZ-jW-5g3" id="Sqy-EN-mZ5"/>
+                        <outlet property="discriptionLabel" destination="7sK-PA-16D" id="FqR-3l-Z0j"/>
+                        <outlet property="newsTitleLabel" destination="KO1-Xo-wdp" id="cr6-6E-z1P"/>
+                        <outlet property="newsWebLinkLabel" destination="2Vh-fu-uta" id="PzG-BW-dND"/>
+                        <outlet property="profileImageview" destination="smm-tQ-0ls" id="sCN-92-d3H"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xn6-Ci-J0N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -261,7 +274,7 @@ can take a clone of it and verify</string>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="odn-lP-CgY">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="householdPlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="cPj-Vk-oJO">
+                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="householdPlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="cPj-Vk-oJO">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                                     </imageView>
                                 </subviews>
